implement remaining items api biz-logic
